Tue Oct 23 06:04:07 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: Fix scalar_scanner to
	  understand strings starting with an underscore and containing only
	  digits.  Thanks Kelley Reynolds.

	* test/psych/test_scalar_scanner.rb: test for fix

Tue Oct 23 06:00:41 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: Changed comment in psych.rb to update new
	  home page for libyaml.  Thanks to Carolyn Ann.

Sun Oct 21 19:12:59 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h (rb_vm_t::trace_running): add a new field
	  `trace_running' to store vm global tracing status.

	* vm_trace.c: fix SEGV bug. event_hook was free'd
	  even when the hook is still used in another thread.
	  [ruby-dev:46141] [Bug #7032]

Sun Oct 21 19:12:42 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h (rb_vm_t::trace_flag): remove `trace_flag'
	  which is no longer used.

Sun Oct 21 18:34:27 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date__parse): uses more tight parser if
	  defined TIGHT_PARSER.  now inactivated; because it introduces
	  incompatibilities and it is a bit slow.

Sat Oct 20 15:35:06 2012  Narihiro Nakamura  <authornari@gmail.com>

	* include/ruby/ruby.h: add C APIs.
	  VALUE rb_newobj_of(VALUE klass, VALUE flags)
	  #define NEWOBJ_OF(obj,type,klass,flags)
	  These allow to change a allocation strategy depending on klass
	  or flags.

	* gc.c: ditto

	* array.c: use new C API.
	* bignum.c: ditto
	* class.c: ditto
	* complex.c: ditto
	* ext/socket/ancdata.c: ditto
	* ext/socket/option.c: ditto
	* hash.c: ditto
	* io.c: ditto
	* marshal.c: ditto
	* numeric.c: ditto
	* object.c: ditto
	* random.c: ditto
	* range.c: ditto
	* rational.c: ditto
	* re.c: ditto
	* string.c: ditto
	* struct.c: ditto
	  [Feature #7177][Feature #7047]

Sat Oct 20 12:50:00 2012  Zachary Scott	<zachary@zacharyscott.net>

	* ext/socket/socket.c: Documentation for Socket